[TVB-205] have settings table for data services similar to plugin settings